--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,14 @@
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap");
+
 /* Inicio estilos gerais */
 body {
   width: 100%;
+  height: 100%;
   margin: 0;
+}
+
+* {
+  font-family: Ubuntu;
 }
 
 #cabecalho,
@@ -52,16 +59,24 @@ li {
 #menu {
   float: right;
 }
+
+#menu a {
+  color: #fff;
+}
+
 /* Fim estilos específicos do cabeçalho/menu */
 
 /* Inicio dos estilos específicos do Rodapé */
 footer {
-  position: fixed;
   margin: 0;
   bottom: 0;
   height: 120px;
   width: 100%;
   background-color: #464646;
+}
+
+#rodape {
+  margin-top: 50px;
 }
 
 #direitos {
