--- a/styles/index.css
+++ b/styles/index.css
@@ -2,21 +2,14 @@
   width: 100%;
 }
 
-#banner {
-  height: 700px;
-  background-color: #dddddd;
-  box-shadow: 0px 1px 5px #464646;
-}
-
-#banner .row {
-  height: 700px;
-  padding-bottom: 50px;
-}
-
 #post-principal {
   height: 420px;
   margin-top: 150px;
   margin-bottom: 95px;
+}
+
+#sessao-blog {
+  margin-top: 90px;
 }
 
 #thumb-principal {
@@ -25,7 +18,6 @@
   width: auto;
   height: auto;
   margin-bottom: 50px;
-  box-shadow: 0px 1px 10px #464646;
 }
 
 #texto-principal {
@@ -53,10 +45,9 @@
 }
 
 #titulo-blog {
-  font-style: normal;
   font-weight: bold;
-  font-size: 38px;
-  line-height: 44px;
+  font-size: 32px;
+  line-height: 37px;
   text-transform: uppercase;
 }
 
@@ -74,7 +65,7 @@
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
-  margin: 20px 0px 20px 0px;
+  margin: 20px 0px;
 }
 
 .thumb-blog {
@@ -82,7 +73,6 @@
   max-height: 195px;
   width: auto;
   height: auto;
-  box-shadow: 0px 1px 10px #464646;
 }
 
 .linha-postagem {
