--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,30 @@
 @import url("https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap");
 
 /* Inicio estilos gerais */
+
+* {
+  font-family: Ubuntu !important;
+}
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
 
-* {
-  font-family: Ubuntu;
+h1 {
+  font-weight: bold;
+  font-size: 64px !important;
+  line-height: 74px !important;
+  color: #9affe7 !important;
 }
 
-#cabecalho,
-#rodape {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: 150px;
+h2 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 41px;
+  text-transform: uppercase;
+  color: #fff !important;
 }
 
 #ico-geral {
@@ -25,19 +33,58 @@ body {
   width: auto;
   height: auto;
 }
+
+#ler-mais {
+  background: #3057d7;
+  border-radius: 25px;
+  padding: 15px 50px;
+  font-weight: bold;
+  font-size: 16px !important;
+  line-height: 100%;
+  font-feature-settings: "pnum" on, "lnum" on;
+}
+
+#subtitulo-atalho {
+  font-size: 16px;
+  line-height: 150%;
+  color: #464646;
+  margin-bottom: 40px;
+  opacity: 0.8;
+}
+
 /* Fim estilos gerais */
+
+/* Inicio estilos do banner */
+#cabecalho {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#banner {
+  height: 650px;
+  background-color: #3057d7;
+}
+
+#banner .row {
+  height: 700px;
+  padding-bottom: 50px;
+}
+
+/* Fim do estilo do banner */
 
 /* Inicio estilos específicos do cabeçalho/menu */
 
 header {
   height: 90px;
   width: 100%;
-  background-color: #464646;
+  background-color: #ffffff;
 }
 
 nav {
   height: 100%;
 }
+
 #logo-cabecalho {
   max-height: 90px;
   max-width: 200px;
@@ -61,7 +108,11 @@ li {
 }
 
 #menu a {
-  color: #fff;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000;
 }
 
 /* Fim estilos específicos do cabeçalho/menu */
@@ -72,14 +123,25 @@ footer {
   bottom: 0;
   height: 120px;
   width: 100%;
-  background-color: #464646;
+  background-color: #3057d7;
 }
 
 #rodape {
   margin-top: 50px;
 }
 
+#rodape .row {
+  margin: 0 !important;
+}
+
+#linha-rodape {
+  padding-top: 20px;
+  height: 120px;
+}
+
 #direitos {
+  font-size: 22px;
+  line-height: 28px;
   color: #fff;
 }
 /* Fim dos estilos específicos do rodapé */
