--- a/styles/index.css
+++ b/styles/index.css
@@ -29,7 +29,7 @@
   font-weight: 300;
   font-size: 16px;
   line-height: 18px;
-
+  padding-bottom: 20px;
   color: #000000;
 }
 
@@ -42,6 +42,8 @@
   background: #3057d7;
   border-radius: 25px;
   padding: 20px 50px;
+  text-decoration: none;
+  color: #fff;
 }
 #sessao-blog {
   margin-top: 90px;
@@ -53,11 +55,6 @@
   width: auto;
   height: auto;
   margin-bottom: 50px;
-}
-
-#texto-principal {
-  display: flex;
-  justify-items: center;
 }
 
 #categoria-post {
