--- a/styles/ebook.css
+++ b/styles/ebook.css
@@ -32,3 +32,43 @@ footer {
   color: #fff;
 }
 /* Fim dos estilos específicos do rodapé */
+
+
+/* Estilos do formulário */
+
+#form-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#form-box span {
+  margin-bottom: 6px;
+}
+
+#form-box input {
+  margin-top: 16px;
+  width: 100%;
+  background: #FFFFFF;
+  border-radius: 6px;
+  outline: 0;
+  padding-left: 8px;
+  height: 40px;
+  border: none;
+}
+
+#form-box input[type=submit] {
+  width: 50%;
+  background: #464646;
+  border-radius: 20px;
+  padding-left: 0;
+  padding: 8px 8px;
+  height: auto;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 16px;
+text-align: center;
+
+color: #FFFFFF;
+}
