--- a/styles/sobre.css
+++ b/styles/sobre.css
@@ -14,5 +14,43 @@
     background: #DCDCDC;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     height: auto;
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    margin-top: 100px;
+}
+
+#assinate h5 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 115.49%;
+    color: #464646;
+    width: 100%;
+    height: auto;
+}
+
+#assinante span {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    color: #000000;
+    width: 75%;
+    height: auto;
+}
+
+#assinante input[type=text], #assinante input[type=email] {
+    margin-top: 16px;
+    width: 75%;
+    background: #FFFFFF;
+    border-radius: 6px;
+    outline: 0;
+    padding-left: 8px;
+    height: 32px;
+    border: none;
+}
+
+footer {
+    padding-left: 42px;
 }
