--- a/styles/ebook.css
+++ b/styles/ebook.css
@@ -8,10 +8,9 @@
 footer {
   margin: 0;
   bottom: 0;
-  padding-left: 42px;
   height: 120px;
   width: 100%;
-  background: #464646;
+  background: #3057D7;
   box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -43,6 +42,24 @@ footer {
   align-items: flex-start;
 }
 
+#sub {
+  width: 100%;
+  margin-top: 16px;
+}
+
+#sub a {
+  display: none;
+}
+
+#form-box span {
+  color: #FFFFFF;
+  text-align: justify;
+}
+
+#form-box h3 {
+  color: #9AFFE7;
+}
+
 #form-box span {
   margin-bottom: 6px;
 }
@@ -60,7 +77,7 @@ footer {
 
 #form-box input[type=submit] {
   width: 50%;
-  background: #464646;
+  background: #9AFFE7;
   border-radius: 20px;
   padding-left: 0;
   padding: 8px 8px;
@@ -70,5 +87,6 @@ footer {
   font-size: 14px;
   line-height: 16px;
   text-align: center;
-  color: #FFFFFF;
+  color: #000000;
+  cursor: pointer;
 }
