--- a/styles/ebook.css
+++ b/styles/ebook.css
@@ -10,7 +10,7 @@ footer {
   bottom: 0;
   height: 120px;
   width: 100%;
-  background: #3057D7;
+  background: #1B48D1;
   box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
 }
 
