--- a/styles/ebook.css
+++ b/styles/ebook.css
@@ -12,6 +12,7 @@ footer {
   width: 100%;
   background: #1B48D1;
   box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
+  padding-left: 48px;
 }
 
 /*#rodape-ebook {
