--- a/styles/ebook.css
+++ b/styles/ebook.css
@@ -6,17 +6,13 @@
 
 /* Inicio dos estilos específicos do Rodapé */
 footer {
-  margin: 0;
-  bottom: 0;
-  height: 120px;
-  width: 100%;
   background: #1B48D1;
   box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
 }
 
-/*#rodape-ebook {
-  margin-top: 50px;
-}*/
+#rodape {
+  margin-top: 0px;
+}
 
 #rodape-ebook .row {
   margin: 0 !important;
